--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
 
     <!-- Modal for full-size image viewing -->
     <div id="photo-modal" class="modal">
+      <button class="nav-btn prev-btn" aria-label="Previous image">&lt;</button>
+      <button class="nav-btn next-btn" aria-label="Next image">&gt;</button>
       <span class="close-modal">&times;</span>
-      <img id="modal-img" src="" alt="" />
+      <div class="modal-content">
+        <img id="modal-img" src="" alt="" />
+        <div class="loading-indicator">Loading...</div>
+      </div>
+      <div class="modal-counter">
+        <span id="current-index"></span> / <span id="total-count"></span>
+      </div>
     </div>
 
     <script src="assets/js/gallery.js"></script>
