Revert "better modal"
This reverts commit 0c27ca08d9c5b5c20e06d97d11630ce43d84d255.

--- a/index.html
+++ b/index.html
@@ -22,46 +22,16 @@
 
     <!-- Modal for full-size image viewing -->
     <div id="photo-modal" class="modal">
-      <button class="nav-btn prev-btn" title="Previous image">
-        <svg viewBox="0 0 24 24" width="24" height="24">
-          <path
-            fill="currentColor"
-            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
-          />
-        </svg>
-      </button>
-      <button class="nav-btn next-btn" title="Next image">
-        <svg viewBox="0 0 24 24" width="24" height="24">
-          <path
-            fill="currentColor"
-            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
-          />
-        </svg>
-      </button>
-      <button class="close-modal" title="Close">
-        <svg viewBox="0 0 24 24" width="24" height="24">
-          <path
-            fill="currentColor"
-            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
-          />
-        </svg>
-      </button>
+      <button class="nav-btn prev-btn" aria-label="Previous image">&lt;</button>
+      <button class="nav-btn next-btn" aria-label="Next image">&gt;</button>
+      <span class="close-modal">&times;</span>
       <div class="modal-content">
-        <div class="loading-indicator">
-          <svg class="spinner" viewBox="0 0 50 50">
-            <circle
-              cx="25"
-              cy="25"
-              r="20"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="5"
-            ></circle>
-          </svg>
-        </div>
         <img id="modal-img" src="" alt="" />
+        <div class="loading-indicator">Loading...</div>
       </div>
-      <div class="modal-counter"></div>
+      <div class="modal-counter">
+        <span id="current-index"></span> / <span id="total-count"></span>
+      </div>
     </div>
 
     <script src="assets/js/gallery.js"></script>
